--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.34.0",
     "@supabase/supabase-js": "^2.48.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
