--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "finance-pro-360",
   "private": true,
@@ -14,12 +13,14 @@
     "@google/genai": "^1.34.0",
     "@supabase/supabase-js": "^2.48.1",
     "lucide-react": "^0.344.0",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "recharts": "^2.12.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
+    "@types/qrcode.react": "^1.0.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
