--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
-    "recharts": "^2.12.0"
+    "recharts": "^2.12.0",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@types/node": "^20.11.24",
