--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react-helmet-async": "^1.0.1",
     "@vitejs/plugin-react": "^4.3.1",
     "typescript": "^5.5.3",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-pwa": "^1.2.0"
   }
 }
