--- a/package.json
+++ b/package.json
@@ -7,11 +7,21 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "cap:sync": "cap sync",
+    "cap:build": "npm run build && cap sync",
+    "cap:open": "cap open android"
   },
   "dependencies": {
+    "@capacitor/android": "^8.1.0",
+    "@capacitor/camera": "^8.0.1",
+    "@capacitor/core": "^8.1.0",
+    "@capacitor/filesystem": "^8.1.2",
+    "@capacitor/haptics": "^8.0.0",
+    "@capacitor/share": "^8.0.1",
     "@google/genai": "^1.34.0",
     "@supabase/supabase-js": "^2.48.1",
+    "capacitor-native-biometric": "^4.2.2",
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.344.0",
     "qrcode.react": "^4.2.0",
@@ -22,6 +32,8 @@
     "web-push": "^3.6.7"
   },
   "devDependencies": {
+    "@capacitor/assets": "^3.0.5",
+    "@capacitor/cli": "^8.1.0",
     "@types/node": "^20.11.24",
     "@types/qrcode.react": "^1.0.5",
     "@types/react": "^18.3.3",
